[MOSIP-34305] Pre reg api test case description addition (#691)
* [MOSIP-3430 Pre reg api test case description addition

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* MOSIP-3430 updated description for all preReg API

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* MOSIP-3430 updated description for GetSpecificDocumentforaPRID

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* [MOSIP-3430 Pre reg api test case description addition

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* MOSIP-3430 updated description for all preReg API

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* MOSIP-3430 updated description for GetSpecificDocumentforaPRID

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* MOSIP-3430

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* MOSIP-3430

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* MOSIP-3430

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* MOSIP-3430

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

---------

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>
Signed-off-by: gopalaswin <167510433+gopalaswin@users.noreply.github.com>

--- a/apitest/src/main/resources/preReg/GetAllApplicationsWithapplicationId/GetAllApplicationsWithapplicationId.yml
+++ b/apitest/src/main/resources/preReg/GetAllApplicationsWithapplicationId/GetAllApplicationsWithapplicationId.yml
@@ -1,6 +1,7 @@
 GetAllApplicationsWithapplicationId:
    Prereg_GetAllApplicationsWithapplicationId_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/{applicationId}
+      description: Retrieve all applications with the application ID
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: get
@@ -13,6 +14,7 @@ GetAllApplicationsWithapplicationId:
 }'
    Prereg_GetAllApplicationsWithapplicationId_with_expired:
       endPoint: /preregistration/v1/applications/{applicationId}
+      description: Retrieve all applications with the expired application ID
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: get
@@ -25,6 +27,7 @@ GetAllApplicationsWithapplicationId:
 }'
    Prereg_GetAllApplicationsWithapplicationId_with_invalid_applicationId:
       endPoint: /preregistration/v1/applications/{applicationId}
+      description: Retrieve all applications with an invalid application ID
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: get
