--- a/apitest/src/main/resources/preReg/FetchApplicationByPrid/FetchApplicationByPrid.yml
+++ b/apitest/src/main/resources/preReg/FetchApplicationByPrid/FetchApplicationByPrid.yml
@@ -1,6 +1,7 @@
 FetchApplicationByPrid:
    Prereg_FetchApplicationByPrid_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Fetch demographic details using a valid PRID
       role: batch
       restMethod: get
       inputTemplate: preReg/FetchApplicationByPrid/fetchApplicationByPrid
@@ -13,6 +14,7 @@ FetchApplicationByPrid:
 }'
    Prereg_FetchApplicationByPrid_inValid_preRegistrationId_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Fetch demographic details using an invalid PRID
       role: batch
       restMethod: get
       inputTemplate: preReg/FetchApplicationByPrid/fetchApplicationByPrid
