--- a/apitest/src/main/resources/preReg/GetBookingsForRegCenter/GetBookingsForRegCenter.yml
+++ b/apitest/src/main/resources/preReg/GetBookingsForRegCenter/GetBookingsForRegCenter.yml
@@ -1,6 +1,7 @@
 GetBookingsForRegCenter:
    Prereg_GetBookingsForRegCenter_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/bookings/{regCenterId}?from_date=2020-10-01&to_date=2034-10-13
+      description: Retrieve booking for a valid registration center ID
       role: batch
       restMethod: get
       inputTemplate: preReg/GetBookingsForRegCenter/getBookingsForRegCenter
@@ -13,6 +14,7 @@ GetBookingsForRegCenter:
 }'
    Prereg_GetBookingsForRegCenter_with_InValid_date_format:
       endPoint: /preregistration/v1/applications/bookings/{regCenterId}?from_date=2020-45461&to_date=2034-10-13
+      description: Retrieve booking for a registration center with an invalid date format
       role: batch
       restMethod: get
       inputTemplate: preReg/GetBookingsForRegCenter/getBookingsForRegCenter
@@ -29,6 +31,7 @@ GetBookingsForRegCenter:
 }'
    Prereg_GetBookingsForRegCenter_with_InValid_regcenter:
       endPoint: /preregistration/v1/applications/bookings/{regCenterId}?from_date=2020-10-01&to_date=2034-10-13
+      description: Retrieve booking for a registration center with an invalid registration center ID
       role: batch
       restMethod: get
       inputTemplate: preReg/GetBookingsForRegCenter/getBookingsForRegCenter
@@ -45,6 +48,7 @@ GetBookingsForRegCenter:
 }'
    Prereg_GetBookingsForRegCenter_with_InValid_regcenter_invalidDate:
       endPoint: /preregistration/v1/applications/bookings/{regCenterId}?from_date=20204555&to_date=2034-10-13
+      description: Retrieve booking for a registration center with an invalid registration center ID and an invalid date
       role: batch
       restMethod: get
       inputTemplate: preReg/GetBookingsForRegCenter/getBookingsForRegCenter
