--- a/apitest/src/main/resources/preReg/GetPreRegInfoByPrid/GetPreRegInfoByPrid.yml
+++ b/apitest/src/main/resources/preReg/GetPreRegInfoByPrid/GetPreRegInfoByPrid.yml
@@ -1,6 +1,7 @@
 GetPreRegInfoByPrid:
    Prereg_GetPreRegInfoByPrid_Valid_preRegistrationId:
       endPoint: /preregistration/v1/applications/prereg/info/{preRegistrationId}
+      description: Retrieve preregistration information using the preReg Id with a valid preRegistrationId
       role: batch
       restMethod: get
       inputTemplate: preReg/GetPreRegInfoByPrid/getPreRegInfoByPrid
@@ -17,6 +18,7 @@ GetPreRegInfoByPrid:
 
    Prereg_GetPreRegInfoByPrid_inValid_preRegistrationId:
       endPoint: /preregistration/v1/applications/prereg/info/{preRegistrationId}
+      description: Retrieve preregistration information using the preReg Id with an invalid preRegistrationId
       role: batch
       restMethod: get
       inputTemplate: preReg/GetPreRegInfoByPrid/getPreRegInfoByPrid
