--- a/apitest/src/main/resources/preReg/SendOtp/SendOtp.yml
+++ b/apitest/src/main/resources/preReg/SendOtp/SendOtp.yml
@@ -1,6 +1,24 @@
 SendOtp:
+   Prereg_SendOtp_All_Valid_Smoke_Phone_sid:
+      endPoint: /preregistration/v1/login/sendOtp/langcode
+      description: Send OTP with a valid phone number on the phone channel
+      role: batch
+      restMethod: post
+      inputTemplate: preReg/SendOtp/sendotp
+      outputTemplate: preReg/SendOtp/sendotpResult
+      input: '{
+  "version": "1.0",
+  "requesttime": "$TIMESTAMP$",
+  "userId": "9090872300",
+  "id": "mosip.pre-registration.login.sendotp"
+}'
+      output: '{
+  "status": "success"
+}'
+
    Prereg_SendOtp_Invalid_Phone_Neg:
       endPoint: /preregistration/v1/login/sendOtp/langcode
+      description: Send OTP by providing an invalid phone number on the phone channel side
       role: batch
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
@@ -21,6 +39,7 @@ SendOtp:
 
    Prereg_SendOtp_MISSING_Phone_Neg:
       endPoint: /preregistration/v1/login/sendOtp/langcode
+      description: Sent OTP without a phone number
       role: batch
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
@@ -41,7 +60,8 @@ SendOtp:
 
    Prereg_SendOtp_SpacialCharacter_Val_Phone_Neg:
       endPoint: /preregistration/v1/login/sendOtp/langcode
-      role: batch
+      description: Sent OTP with special characters through the phone channel
+      role: batch 
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
       outputTemplate: preReg/error
@@ -59,8 +79,26 @@ SendOtp:
   ]
 }'
 
+   Prereg_SendOtp_All_Valid_Smoke_email_sid:
+      endPoint: /preregistration/v1/login/sendOtp/langcode
+      description: Send OTP using a valid email address through the email channel
+      role: batch
+      restMethod: post
+      inputTemplate: preReg/SendOtp/sendotp
+      outputTemplate: preReg/SendOtp/sendotpResult
+      input: '{
+  "version": "1.0",
+  "requesttime": "$TIMESTAMP$",
+  "userId": "john.doe@mailinator.com",
+  "id": "mosip.pre-registration.login.sendotp"
+}'
+      output: '{
+  "status": "success"
+}'
+
    Prereg_SendOtp_Invalid__email_Neg:
       endPoint: /preregistration/v1/login/sendOtp/langcode
+      description: Send OTP using an invalid email address via the email channel
       role: batch
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
@@ -81,6 +119,7 @@ SendOtp:
 
    Prereg_SendOtp_Missing_email_Neg:
       endPoint: /preregistration/v1/login/sendOtp/langcode
+      description: Sent OTP without an email address via the email channel
       role: batch
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
@@ -101,6 +140,7 @@ SendOtp:
 
    Prereg_SendOtp_SpacialCharacter_email_Neg:
       endPoint: /preregistration/v1/login/sendOtp/langcode
+      description: Sent OTP with special characters through the email channel
       role: batch
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
