--- a/pre-registration/pom.xml
+++ b/pre-registration/pom.xml
@@ -115,8 +115,8 @@
 		<sonar.cpd.exclusions>**/dto/**,**/entity/**,**/config/**</sonar.cpd.exclusions>
 
 		<!-- Mosip kernel -->
-		<kernel.bom.version>1.3.0-SNAPSHOT</kernel.bom.version>
-		<kernel.core.version>1.3.0-SNAPSHOT</kernel.core.version>
+		<kernel.bom.version>1.3.0-beta.1</kernel.bom.version>
+		<kernel.core.version>1.3.0-beta.1</kernel.core.version>
 		<pre.registration.core.version>1.3.0-SNAPSHOT</pre.registration.core.version>
 		<spring-cloud.version>2020.0.4</spring-cloud.version>
 	</properties>
