--- a/pre-registration/pre-registration-core/pom.xml
+++ b/pre-registration/pre-registration-core/pom.xml
@@ -17,10 +17,10 @@
 
 	<properties>
 		<!-- Mosip kernel -->
-		<kernel.templatemanager.velocity.version>1.3.0-SNAPSHOT</kernel.templatemanager.velocity.version>
-		<kernel.logger.logback.version>1.3.0-SNAPSHOT</kernel.logger.logback.version>
-		<kernel.dataaccess.hibernate.version>1.3.0-SNAPSHOT</kernel.dataaccess.hibernate.version>
-		<kernel.bom.version>1.3.0-SNAPSHOT</kernel.bom.version>
+		<kernel.templatemanager.velocity.version>1.3.0-beta.1</kernel.templatemanager.velocity.version>
+		<kernel.logger.logback.version>1.3.0-beta.1</kernel.logger.logback.version>
+		<kernel.dataaccess.hibernate.version>1.3.0-beta.1</kernel.dataaccess.hibernate.version>
+		<kernel.bom.version>1.3.0-beta.1</kernel.bom.version>
 	</properties>
 
 	<dependencyManagement>
