--- a/pre-registration/pre-registration-datasync-service/pom.xml
+++ b/pre-registration/pre-registration-datasync-service/pom.xml
@@ -16,10 +16,10 @@
 
 	<properties>
 		<!-- Mosip kernel -->
-		<kernel.keymanager.version>1.3.0-SNAPSHOT</kernel.keymanager.version>
-		<kernel.ref.idobjectvalidator.version>1.3.0-SNAPSHOT</kernel.ref.idobjectvalidator.version>
-		<kernel.transliteration.icu4j.version>1.3.0-SNAPSHOT</kernel.transliteration.icu4j.version>
-		<kernel.bom.version>1.3.0-SNAPSHOT</kernel.bom.version>
+		<kernel.keymanager.version>1.3.0-beta.1</kernel.keymanager.version>
+		<kernel.ref.idobjectvalidator.version>1.3.0-beta.1</kernel.ref.idobjectvalidator.version>
+		<kernel.transliteration.icu4j.version>1.3.0-beta.1</kernel.transliteration.icu4j.version>
+		<kernel.bom.version>1.3.0-beta.1</kernel.bom.version>
 		<pre.registration.core.version>1.3.0-SNAPSHOT</pre.registration.core.version>
 		<pre.registration.application.service.version>1.3.0-SNAPSHOT</pre.registration.application.service.version>
 		<pre.application.service.version>1.3.0-SNAPSHOT</pre.application.service.version>
